add animation for hello wolrd

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>world</title>
 </head>
 <body>
     <div class="content">
-        <h1 class="bigTitle">hello world</h1>
-<button class="btn"></button>
+        <h1 class="bigTitle ">helloworld</h1>
+<button class="btn" onclick="anima()">toggle</button>
 
 </div>
 
