--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>world</title>
 </head>
-<body>
+<body contenteditable="true">
     <div class="content">
         <h1 class="bigTitle ">helloworld</h1>
-<button class="btn" onclick="anima()">toggle</button>
-
+        <nav class="buttons">
+<button class="btnAni" onclick="anima()">animation</button>
+<button class="btnColo" onclick="colora()">color</button>
+</nav>
 </div>
-
+<div class="colors ">
+<div class="color Cblue" onclick="colo1()"></div>
+<div class="color Cwhite" onclick="colo2()"></div>
+<div class="color Cpink" onclick="colo3()"></div>
+<div class="color Cblack" onclick="colo4()"></div>
+</div>
+<div class="flow">
+    
+<button class="close" onclick="clos()"></button>
+</div>
 
     <script src="/main.js"></script>
 </body>
