--- a/index.html
+++ b/index.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>world</title>
-</head>
-<body contenteditable="true">
-    <div class="content">
-        <h1 class="bigTitle ">helloworld</h1>
-        <nav class="buttons">
-<button class="btnAni" onclick="anima()">animation</button>
-<button class="btnColo" onclick="colora()">color</button>
-</nav>
-</div>
-<div class="colors ">
-<div class="color Cblue" onclick="colo1()"></div>
-<div class="color Cwhite" onclick="colo2()"></div>
-<div class="color Cpink" onclick="colo3()"></div>
-<div class="color Cblack" onclick="colo4()"></div>
-</div>
-<div class="flow">
-    
+  <head>
+    <!-- font one -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <!-- font two -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+     <!-- font three -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+      <!-- font foure -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+      <!--  -->
 
-</div>
-<button class="close" onclick="clos()"></button>
+    <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>world</title>
+  </head>
+  <body>
+    <div class="content">
+      <h1 class="bigTitle">welcometomywebsite</h1>
+      <nav class="buttons">
+        <button class="btnAni" onclick="anima()">animation</button>
+        <button class="btnColo" onclick="colora()">color</button>
+     <button class="btnFont" onclick="btnFont()">font</button>  
+    </nav>
+   
+    <div class="colors">
+      <div class="color Cblue" onclick="colo1()"></div>
+      <div class="color Cwhite" onclick="colo2()"></div>
+      <div class="color Cpink" onclick="colo3()"></div>
+      <div class="color Cblack" onclick="colo4()"></div>
+    </div>
+    <div class="fn">   <div class="fonts ">
+        <p class="fontOne font" onclick="one()">Welcome to..</p>
+        <p class="fontTwo font" onclick="two()">Welcome to..</p>
+        <p class="fontThree font" onclick="three()">Welcome to..</p>
+        <p class="fontFoure font" onclick="foure()">Welcome to..</p>
+
+    </div></div>
+ 
+ </div>
+
+
+
+ 
+    <div class="flow"></div>
+
+    <button class="close" onclick="clos()"><svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="#fff"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></button>
     <script src="/main.js"></script>
-</body>
+  </body>
 </html>
